-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u371, jfx21
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8304107 | jfx20.0.1 | Kevin Rushforth | P2 | Resolved | Fixed | b01 |
| JDK-8304099 | jfx17.0.7 | Kevin Rushforth | P2 | Resolved | Fixed | |
| JDK-8304102 | jfx11.0.19 | Kevin Rushforth | P2 | Resolved | Fixed | b01 |
| JDK-8303686 | 8u381 | Jay Bhaskar | P2 | Resolved | Fixed | b01 |
| JDK-8303733 | 8u371 | Ambarish Rapte | P2 | Closed | Fixed | b10 |
- backported by
-
JDK-8303686 Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements
-
- Resolved
-
-
JDK-8304099 Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements
-
- Resolved
-
-
JDK-8304102 Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements
-
- Resolved
-
-
JDK-8304107 Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements
-
- Resolved
-
-
JDK-8303733 Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements
-
- Closed
-
- is blocked by
-
JDK-8301022 Video distortion is observed while playing youtube video
-
- Resolved
-
- relates to
-
JDK-8299977 Update WebKit to 615.1
-
- Resolved
-
-
JDK-8300954 HTML default Range input control not rendered
-
- Resolved
-
- links to
-
Commit
openjdk/jfx11u/e036712d
-
Commit
openjdk/jfx17u/55f5576a
-
Commit
openjdk/jfx20u/0bf898ef
-
Commit
openjdk/jfx/bbdc5998
-
Review
openjdk/jfx11u/138
-
Review
openjdk/jfx17u/128
-
Review
openjdk/jfx20u/8
-
Review(master)
openjdk/jfx/1049