8303217: Webview loaded webpage is not showing play, volume related buttons for embeded Audio/Video elements 8300954: HTML default Range input control not rendered

Co-authored-by: Hima Bindu Meda <hmeda@openjdk.org>
Reviewed-by: kcr, hmeda